1.5
Integração da aplicação web completa, integrando a API Spring Boot com a interface Next.js (React)